--- a/jellyfish/style.css
+++ b/jellyfish/style.css
@@ -26,7 +26,6 @@ a {
     font-weight: bold;
     color: #fff;
     text-shadow: 0 0 3px #26F;
-
 }
 
 #webgl-canvas {
@@ -62,8 +61,7 @@ a {
     font-size: 16px;
     top: 40%;
     left: 50%;
-    margin: auto;
-    margin-left: -175px;
+    margin: auto auto auto -175px;
     width: 350px;
     padding: 10px;
     border: 1px solid #fff;
